<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                app:cardCornerRadius="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Calculator Input Dialog"
                        style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"/>

                    <TextView
                        android:id="@+id/mainActivity_lastDoubleValueCalculatorInputDialog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_value" />

                    <Button
                        android:id="@+id/calculator_input_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Base.Widget.AppCompat.Button.Colored"
                        android:text="@string/show_dialog" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--HeinsDatePickerDialog-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                app:cardCornerRadius="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/heins_date_picker_dialog"
                        style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"/>

                    <TextView
                        android:id="@+id/mainActivity_lastDateValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_value" />

                    <Button
                        android:id="@+id/date_input_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Base.Widget.AppCompat.Button.Colored"
                        android:text="@string/show_dialog" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--HeinsInputDialog-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                app:cardCornerRadius="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/heins_input_dialog"
                        style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"/>

                    <TextView
                        android:id="@+id/mainActivity_lastDouble_heinsInputDialog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_value"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/input_dialog_double"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Base.Widget.AppCompat.Button.Colored"
                            android:text="@string/show_double" />

                        <Button
                            android:id="@+id/input_dialog_long"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Base.Widget.AppCompat.Button.Colored"
                            android:text="@string/show_long" />

                        <Button
                            android:id="@+id/input_dialog_string"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Base.Widget.AppCompat.Button.Colored"
                            android:text="@string/show_string" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
